[inventory] use populationPie, add tab for history

--- a/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/Inventory.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
@@ -29,18 +28,19 @@
       <Separator maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" />
       <TabPane>
          <tabs>
-            <Tab text="Population chart">
+            <Tab fx:id="populationPieTab" text="Population chart">
                <content>
-                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
-                     <children>
-                        <PieChart fx:id="populationChart" blendMode="DARKEN" labelLineLength="10.0" VBox.vgrow="ALWAYS" />
-                     </children>
-                  </VBox>
+                  <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
                </content>
             </Tab>
             <Tab text="Current population">
                <content>
                   <VBox fx:id="currentHousingsBox" prefHeight="200.0" prefWidth="100.0" />
+               </content>
+            </Tab>
+            <Tab fx:id="populationHistory" text="Population history">
+               <content>
+                  <VBox fx:id="popHistoryVBox" prefHeight="200.0" prefWidth="100.0" />
                </content>
             </Tab>
          </tabs>
