[HousingView] add population history to housing view

--- a/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
+++ b/database_mockup/src/animalkeeping/ui/fxml/HousingView.fxml
@@ -30,7 +30,7 @@
                             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                           </content>
                         </Tab>
-                      <Tab closable="false" text="History" />
+                      <Tab fx:id="historyTab" closable="false" text="History" />
                     </tabs>
                   </TabPane>
                </children>
